# cigsegy

./: .gitattributes  .gitignore  Attributions.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.rst  README_ZH.md  build.bat  build.sh  pyproject.toml  setup.py  todo
advance/: setup.py
advance/segy/: __init__.py  constinfo.py  create.py  deprecated.py  factories.py  interp.py  plot.py  pysegyr.cpp  segybase.hpp  segyc.hpp  segynd.hpp  segynp.py  segyrw.cpp  segyrw.h  segyw.hpp  sutils.h  tools.py  transform.py  utils.py
advance/segy/cpp/: _CXX_SEGY.pyi  segybase.cpp  segybase.h  segyc.hpp  segyrw.cpp  segyrw.h  segywrap.cpp  sutils.hpp
cigse/: __init__.py  create.py  createtool.py  deprecated.py  factories.py  interp.py  plot.py  segynp.py  tools.py  utils.py
cigse/cpp/: _CXX_SEGY.pyi  mio.hpp  segybase.cpp  segybase.hpp  segyc.hpp  segyrw.cpp  segyrw.h  segywrap.cpp  utils.hpp
cigsegy/: constinfo.py  factories.py  plot.py  segynp.py  tools.py  utils.py
cigsegy/cpp/: segybase.h  segyrw.h  segywrap.cpp
docs/: Doxyfile  Doxyfile.in  aboutsegy.rst  changelog.rst  cli.rst  comparison.rst  conf.py  ends.rst  index.rst  install.rst  requirements.txt
docs/api/: cppapi.rst  pyapi.rst
docs/core/: SegyNP.rst  create.rst  headers.rst  post.rst  pre.rst
python/: CMakeLists.txt  PySegy.cpp  __init__.py  cigsegy.pyi  deprecated.py  interp.py  plot.py  segynp.py  setup.py  tools.py  utils.py
src/: CMakeLists.txt  segy.cpp
src/include/: mio.hpp  progressbar.hpp  segy.h  utils.h
tests/: test_create_cut.py  test_read.py  test_scan.py  test_segynp.py  test_write.py
tools/: CMakeLists.txt  SEGYCreate.cpp  SEGYRead.cpp  cxxopts.hpp
